[package]
name = "mempool"
version = "0.1.3"
authors = ["geli <xlugeli@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
object-pool = "0.5"
crossbeam="0.7.3"
parking_lot = "0.11.0"
futures = "0.3.5"
anyhow = "1.0.32"
rand = "0.7.3"
rayon = "1.4.0"
lazy_static ="1.4.0"